--- a/frontend/flaskr/static/styles/store.css
+++ b/frontend/flaskr/static/styles/store.css
@@ -165,8 +165,13 @@
 
 .item-image {
     position: relative;
-    height: 250px;
+    border-radius: 15px;
     overflow: hidden;
+    height: 250px;
+    background: #f8f9fa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .item-image img {
