--- a/frontend/flaskr/templates/store.html
+++ b/frontend/flaskr/templates/store.html
@@ -50,8 +50,8 @@
             {% for id,name,description,available in template_items %}
                 <div class="item-card">
 <!--                    <div class="item-image">-->
-<!--                        <img src="https://images.unsplash.com/photo-1572981779307-38b8cabb2407?w=400&h=300&fit=crop" alt="Power Drill">-->
-<!--                        <div class="item-badge">Featured</div>-->
+<!--                        <i class="fas fa-image product-image-placeholder"></i>-->
+<!--&lt;!&ndash;                        <div class="item-badge">Featured</div>&ndash;&gt;-->
 <!--&lt;!&ndash;                        <div class="item-badge popular">Popular</div>&ndash;&gt;-->
 <!--                    </div>-->
                     <div class="item-content">
@@ -63,10 +63,10 @@
                         <div class="item-details">
                             <span>
                             </span>
-                            <span class="rating">
-                                <i class="fas fa-star"></i>
-                                4.8 (24 reviews)
-                            </span>
+<!--                            <span class="rating">-->
+<!--                                <i class="fas fa-star"></i>-->
+<!--                                4.8 (24 reviews)-->
+<!--                            </span>-->
                         </div>
                         <div class="item-footer">
                             <div class="available">
