feat: list items working

--- a/frontend/rental_system_web/src/app/store-page/store-page.component.html
+++ b/frontend/rental_system_web/src/app/store-page/store-page.component.html
@@ -43,6 +43,10 @@
       @for (item of storeItems; track item.id) {
         <app-item-card [item]="item"></app-item-card>
       }
+      @for (data of (someData$ | async); track data.id) {
+        {{ logItem(data) }}
+      }
+
     </div>
 
     <div class="load-more">
