--- a/frontend/rental_system_web/src/app/login-page/login-page.component.html
+++ b/frontend/rental_system_web/src/app/login-page/login-page.component.html
@@ -8,7 +8,7 @@
     <form
       class="login-form"
       [formGroup]="loginForm"
-      (ngSubmit)="submit()"
+      (ngSubmit)="submitLogin()"
       aria-label="Login Form">
 
       <!-- Username -->
