feat: registration working

--- a/frontend/rental_system_web/src/app/registration-page/registration-page.component.html
+++ b/frontend/rental_system_web/src/app/registration-page/registration-page.component.html
@@ -6,7 +6,7 @@
       <p>Create your account to start renting</p>
     </div>
 
-    <form class="register-form" [formGroup]="registerForm" (ngSubmit)="submit()">
+    <form class="register-form" [formGroup]="registerForm" (ngSubmit)="submitRegistration()">
 
       <!-- Username -->
       <div class="form-group">
